<resources>
    <string name="app_name">Omni List</string>
    <string name="text_add_to_home_screen">Add shortcut</string>
    <string name="text_accept">Accept</string>
    <string name="text_clear">Clear</string>
    <string name="text_copy_text">Copy content</string>
    <string name="text_copy_link">Copy link</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_close">Close</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit">Edit</string>
    <string name="text_give_up">Give up</string>
    <string name="text_pick">Pick</string>
    <string name="text_reset">Rest</string>
    <string name="text_send">Send</string>
    <string name="text_search">Search</string>
    <string name="text_save">Save</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_back">Back</string>
    <string name="text_trash">Trash</string>
    <string name="text_archived">Archive</string>
    <string name="text_move_out">Move out</string>
    <string name="text_undo">Undo</string>
    <string name="text_redo">Redo</string>
    <string name="text_get_it">Get it</string>
    <string name="text_comments">Comments</string>
    <string name="text_created_time">Created</string>
    <string name="text_last_modified_time">Updated</string>
    <string name="text_last_sync_time">Sync</string>
    <string name="text_chars">Chars</string>
    <string name="text_more">More</string>
    <string name="text_settings">Settings</string>
    <string name="text_statistic">Statistics</string>
    <string name="text_tips">Tips</string>
    <string name="text_warning">Warning</string>
    <string name="text_location">Location</string>
    <string name="text_location_not_found">Location not found</string>
    <string name="failed_to_get_location">Failed to get location</string>
    <string name="trying_to_get_location">Trying to get location&#8230;</string>
    <string name="text_save_or_discard">Save or discard modification?</string>
    <string name="text_save_successfully">Saved successfully</string>
    <string name="text_update_successfully">Updated successfully</string>
    <string name="text_error_when_save">Error occurred when save data.</string>
    <string name="title_required">Title required</string>
    <string name="text_file_saved_to">File is saved to %s</string>
    <string name="cannot_get_link_of_not_synced_item">Unable to get link of un-synchronized project</string>
    <string name="content_was_copied_to_clipboard">Content has been saved to clipboard</string>
    <string name="text_save_and_retry_to_add_shortcut">The project hasn\'t been saved, unable to add shortcut. Please try again after saved.</string>
    <string name="text_save_and_retry">Save and retry</string>
    <string name="successfully_add_shortcut">Successfully add shortcut</string>
    <string name="text_failed_to_load_data">Failed to load data.</string>
    <string name="text_failed_to_modify_data">Failed to modify data.</string>
    <string name="set_successfully">Set successfully</string>
    <string name="text_find_in_page">Find in page</string>
    <string name="text_font">Font</string>
    <string name="text_next">Next</string>
    <string name="text_last">Last</string>
    <string name="content_failed_to_parse_intent">Failed to parse the intent</string>
    <string name="check_network_availability">Check network availability</string>
    <string name="text_color">Color</string>
    <string name="text_portrait">Portrait</string>
    <string name="text_items">Items</string>
    <string name="text_tab_again_exit">Again to exit</string>
    <string name="text_attachment">Attachment</string>
    <string name="text_sub_assignment_number">Sub assignment</string>
    <string name="text_alarm">Alarm</string>
    <string name="text_working">Working&#8230;</string>
    <string name="text_ok">OK</string>
    <string name="text_pick_from_album">Pick from album</string>
    <string name="text_notification">Notification</string>
    <string name="input_password_and_continue">Input password</string>
    <string name="share_message_chooser">Select share mode</string>
    <plurals name="assignments_number">
        <item quantity="zero">%d assignment</item>
        <item quantity="one">%d assignment</item>
        <item quantity="other">%d assignments</item>
    </plurals>
    <plurals name="attachments_number">
        <item quantity="zero">%d attachment</item>
        <item quantity="one">%d attachment</item>
        <item quantity="other">%d attachments</item>
    </plurals>
    <string name="empty_list_to_capture">Empty list to capture</string>
    <string name="capture_list">Capture</string>
    <string name="capturing">Capturing&#8230;</string>
    <string name="drawer_menu_today">Today</string>
    <string name="drawer_menu_categories">Categories</string>
    <string name="drawer_menu_calendar">Calendar</string>
    <string name="drawer_menu_notices">Notices</string>
    <string name="drawer_menu_setting">Settings</string>
    <string name="drawer_menu_trash">Trash</string>
    <string name="drawer_menu_archive">Archived</string>
    <string name="drawer_menu_sync">Sync</string>
    <string name="drawer_menu_category">Category</string>
    <string name="failed_to_create_file">Failed to create file</string>
    <string name="storage_not_available">Storage unavailable</string>
    <string name="failed_to_save_attachment">Failed to save attachment</string>
    <string name="add_attachment">Attach</string>
    <string name="attachment_type_files">File</string>
    <string name="attachment_type_images">Image</string>
    <string name="attachment_type_videos">Video</string>
    <string name="attachment_type_recordings">Recording</string>
    <string name="attachment_type_sketches">Sketch</string>
    <string name="album">Album</string>
    <string name="net_image_link">Image link</string>
    <string name="file">File</string>
    <string name="create">Create</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="sound_record">Sound record</string>
    <string name="take_video">Take video</string>
    <string name="sketch">Sketch</string>
    <string name="activity_not_found_to_resolve">No available application</string>
    <string name="use_to_open">Open with&#8230;</string>
    <string name="information">Information</string>
    <string name="failed_when_play_audio">Error occurred when play audio</string>
    <string name="failed_to_resolve_intent">Failed to resolve intent</string>
    <string name="confirm_to_clear_bitmap">Confirm to clear bitmap?</string>
    <string name="stroke">Stroke</string>
    <string name="opacity">Opacity</string>
    <string name="saturation">Saturation</string>
    <string name="file_not_exist">File not found</string>
    <string name="text_export">Export</string>
    <string name="text_export_image">Export image</string>
    <string name="text_export_text">Export text</string>
    <string name="text_export_html">Export html</string>
    <string name="text_export_pdf">Export pdf</string>
    <string name="text_share">Share</string>
    <string name="text_share_image">Share image</string>
    <string name="text_share_text">Share text</string>
    <string name="text_share_html">Share html</string>
    <string name="openas">Open as</string>
    <string name="text">Text</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="other">Other</string>
    <string name="pick_alarm_type">Pick alarm type</string>
    <string name="one_shot">One shot</string>
    <string name="every_day">Every day</string>
    <string name="every_weekday">Weekday (Mon - Fri)</string>
    <string name="every_weekend">Weekend (Sat &amp; Sub)</string>
    <string name="custom_by_week">Custom by week</string>
    <string name="custom_by_month">Custom by month</string>
    <string name="clear_reminder">Clear reminder</string>
    <string name="day_concat">,</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="at">at</string>
    <string name="until">until</string>
    <string name="today_with_date">Today | %s</string>
    <string name="tomorrow_with_date">Tomorrow | %s</string>
    <string name="day_after_tomorrow_with_date">The day after tomorrow | %s</string>
    <string name="this_friday_with_date">This friday | %s</string>
    <string name="this_sunday_with_date">This sunday | %s</string>
    <string name="next_monday_with_date">Next monday | %s</string>
    <string name="clear_date">Clear date</string>
    <string name="notice_time">Notice time</string>
    <string name="today_date_time">Today (%s)</string>
    <string name="morning_with_time">Morning (9:00 AM)</string>
    <string name="noon_with_time">Noon (12:00 PM)</string>
    <string name="afternoon_with_time">Afternoon (3:00 PM)</string>
    <string name="evening_with_time">At dusk (6:00 PM)</string>
    <string name="night_with_time">Evening (9:00 PM)</string>
    <string name="clear_time">Clear time</string>
    <string name="custom">Custom&#8230;</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="set_weeks">Set week</string>
    <string name="week_required">Week is required</string>
    <string name="one_assignment_marked_as_done">1 assignment is marked as done</string>
    <string name="remind_in_minutes">Reminder in %d minutes</string>
    <string name="will_be_reminded_in_minutes">Will reminder in %d minutes</string>
    <string name="mark_as_done">Done</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="user_info_click_to_see_personal_info">User Info</string>
    <string name="user_info">User info</string>
    <string name="school">School | Company</string>
    <string name="major">Major | Carer</string>
    <string name="timeline">Timeline</string>
    <string name="statistic">Statistics</string>
    <string name="not_login_click_to_login">Not login · Click to login</string>
    <string name="login_and_get_storage">Login to get storage</string>
    <string name="storage_left_monthly">Storage left</string>
    <string name="storage_left_and_click_grant_tips">%d MB left, click to get more storage</string>
    <string name="not_login_try_after_login">Not login, try again after login</string>
    <string name="timeline_detail">Moment you shared with Omni List</string>
    <string name="activities_in_seven_days">Assignments added during recent 7 days</string>
    <string name="logout">Logout</string>
    <string name="statistic_activities">Activities during recent 7 days</string>
    <string name="statistic_title_activities">Assignments added during recent 7 days</string>
    <string name="statistic_models_added">Models added</string>
    <string name="statistic_title_models_added">Statistics of added models</string>
    <string name="text_filter">Filter</string>
    <string name="text_show_completed">Show completed</string>
    <string name="text_hide_completed">Hide completed</string>
    <string name="add_labels">Add tags</string>
    <string name="add_location">Add location</string>
    <string name="rate">Set priority</string>
    <string name="text_configuration">Configuration</string>
    <string name="widget_list_options">LIST OPTIONS</string>
    <string name="text_show">Show</string>
    <string name="widget_select_category_tips">Pick category</string>
    <string name="widget_filter_options">FILTER OPTIONS</string>
    <string name="widget_show_completed">Show completed assignment</string>
</resources>