<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item_today"
        android:title="@string/today_with_date"/>
    <item android:id="@+id/item_tomorrow"
        android:title="@string/tomorrow_with_date"/>
    <item android:id="@+id/item_this_friday"
        android:title="@string/this_friday_with_date"/>
    <item android:id="@+id/item_this_sunday"
        android:title="@string/this_sunday_with_date"/>
    <item android:id="@+id/item_next_monday"
        android:title="@string/next_monday_with_date"/>
    <item android:id="@+id/item_custom"
        android:title="@string/custom"/>
    <item android:id="@+id/item_clear_date"
        android:icon="@drawable/ic_clear_black"
        android:visible="false"
        android:title="@string/clear_date"/>
</menu>