<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:minWidth="340dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="me.shouheng.omnilist.activity.ConfigActivity">

        <TextView
            android:id="@+id/tv_title"
            android:text="@string/text_configuration"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <View
            android:background="@drawable/below_shadow"
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:paddingStart="@dimen/medium_spacing"
            android:paddingEnd="@dimen/medium_spacing"
            android:paddingBottom="@dimen/sub_small_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_list_options_tip"
                android:textColor="@color/colorAccent"
                android:text="@string/widget_list_options"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <me.shouheng.omnilist.widget.themed.SupportTextView
                    android:text="@string/text_show"
                    android:textSize="16sp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_type"
                    android:entries="@array/widget_list_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_category"
                android:text="@string/widget_select_category_tips"
                android:textSize="16sp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <me.shouheng.omnilist.widget.themed.Divider
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_list_filter_tip"
                android:textColor="@color/colorAccent"
                android:text="@string/widget_filter_options"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cb_show_completed"
                android:text="@string/widget_show_completed"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_positive"
                    android:layout_alignParentEnd="true"
                    android:text="@string/text_accept"
                    android:textColor="@color/colorAccent"
                    android:background="@android:color/transparent"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</layout>